...

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/springTV"
        android:layout_marginTop="21dp"
        android:id="@+id/newTV"
        android:textSize="30sp"
        android:textColor="@android:color/black"
        android:layout_alignParentStart="true"
        android:text="test" />

    <TextView
...
