...

    <EditText
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/sName"
        android:hint="Schedule Name"
        android:textSize="30sp"
        android:singleLine="true" />

    <TextView
        android:layout_width="wrap_content"
...
